2004-02-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpUtility.cs: fixed length check. Closes bug #54201.
	Thanks to Michal Moskal. Use MemoryStream instead of an ArrayList when
	decoding.

2004-02-11  Jackson Harper <jackson@ximian.com>

	* TraceData.cs: Use ToString for cookie/header/var name values so
	null is handled properly.
	
2004-02-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: ApplicationState is inited by the factory so,
	return that value in the property. when we use the context Session,
	cache it in the instance field.

	* HttpApplicationFactory.cs: fixed target Type for the event when
	hooking application and module events. Initialize application
	and session scope objects. Fixes non-aplication events hook up.

	* HttpStaticObjectsCollection.cs: added StaticItem and delay the
	creation of the objects until they are requested.

2004-01-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: fixlet for session events hook.

2004-01-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: attach all events from Type and BaseType
	at the same time. Fixes bug #53454.

2004-01-27  Jackson Harper <jackson@ximian.com>

	* HttpCachePolicy.cs: varybyparams::GetResponseHeader can return
	null now, dont hadd the header if it does.
	* HttpCacheVaryByParams.cs: Return null if there are no items.

2004-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCachePolicy.cs: it's not public.
	* HttpRuntime.cs: wait for requests before disposing the queue.

2004-01-15  Jackson Harper <jackson@ximian.com>

	* HttpCachePolicy.cs: Fix typo causing varyby params headers to be
	created when they shouldn't be.
	
2004-01-14  Jackson Harper <jackson@ximian.com>

	* TraceData.cs: Fix some typos in the output text. Fix control
	position when adding controls recursively.
	
2004-01-14  Jackson Harper <jackson@ximian.com>

	* HttpCachePolicy.cs: Expose duration and sliding properties.
	